[gd_scene load_steps=9 format=3 uid="uid://bthi608hd2pe4"]

[ext_resource type="Texture2D" uid="uid://c6ftufv3dcxx2" path="res://resources/miku_idle.png" id="1_hj8ce"]
[ext_resource type="Script" path="res://scenes/player.gd" id="1_iq10c"]
[ext_resource type="Texture2D" uid="uid://ce7pv6jejaaid" path="res://resources/miku_die.png" id="3_01aq4"]

[sub_resource type="Animation" id="Animation_kthyx"]
resource_name = "idle"
length = 0.95
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MikuIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_veijk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MikuIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MikuDie:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v800u"]
resource_name = "die"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MikuDie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MikuIdle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MikuDie:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u8h5v"]
_data = {
"RESET": SubResource("Animation_veijk"),
"die": SubResource("Animation_v800u"),
"idle": SubResource("Animation_kthyx")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3adf"]
radius = 12.0
height = 60.0

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
scale = Vector2(1.5, 1.5)
collision_mask = 22
script = ExtResource("1_iq10c")

[node name="MikuIdle" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4.5, 9)
texture = ExtResource("1_hj8ce")
hframes = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u8h5v")
}
autoplay = "idle"
speed_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 10)
shape = SubResource("CapsuleShape2D_a3adf")
debug_color = Color(0, 0.6, 0.701961, 0.129412)

[node name="LaserCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="MikuDie" type="Sprite2D" parent="."]
position = Vector2(4, 12.6667)
texture = ExtResource("3_01aq4")
hframes = 3

[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
